[package]
name = "common-stdx"
version = "0.1.8"
edition = "2024"
description = "extension for the std lib, for things i commonly reuse"
repository = "https://github.com/simoncreates/common-stdx.git"
license = "MIT OR Apache-2.0"
readme = "README.md"


[lib]
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"

[features]
default = []
float = []
